added labels to readme and title

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title> Portfolio</title>
+    <title> Tyler Portfolio</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
     <body>
-        <header></header>
+        <header>Tyler Caelwaerts</header>
         <!--needs meta element for the viewport  -->
         <!-- needs a linked style sheet -->
          <!-- needs a nav element -->
