added some base for CSS, updates to sections in HTML

--- a/index.html
+++ b/index.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title> Tyler Portfolio</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-    <body>
-        <header>Tyler Caelwaerts</header>
+    <body> 
+        <hero></hero>    
+        <h1>Tyler Caelwaerts</h1>
         <!--needs meta element for the viewport  -->
         <!-- needs a linked style sheet -->
-         <!-- needs a nav element -->
-        <section></section>
-        <section></section>
-        <section></section>
+         <!-- needs a nav element and a link for each section -->
+         <section>
+            <h2>About Me</h2>
+        <p>This section shows my goals and some pieces about me</p>
+    </section>
+        <section>
+            <h2>Portfolio</h2>
+        <p>This section shows my projects and what I did with them </p>
+    </section>
+        <section>
+            <h2>Contact</h2>
+        <p>This section shows best forms of contact</p>
+    </section>
     </body>
 </html>
