--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+<header>
     <meta charset="UTF-8">
     <title> Tyler Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
-</head>
+    <h1>Tyler Caelwaerts</h1>
+</header>
     <body> 
         <hero></hero>    
-        <h1>Tyler Caelwaerts</h1>
-        <!--needs meta element for the viewport  -->
-        <!-- needs a linked style sheet -->
          <!-- needs a nav element and a link for each section -->
          <section>
             <h2>About Me</h2>
@@ -19,10 +17,14 @@
         <section>
             <h2>Portfolio</h2>
         <p>This section shows my projects and what I did with them </p>
+        <h3>https://tiecaelwaerts.github.io/prework-study-guide/</h3>
+        <p>First project, showing the initial process of HTML and CSS</p>
+        <h3>https://tiecaelwaerts.github.io/Horiseon-ticket/</h3>
+        <p>First homework assignment, shows the starting of advanced HTML</p>
     </section>
         <section>
             <h2>Contact</h2>
-        <p>This section shows best forms of contact</p>
+        <p>Coming soon to a Software Engineer near you!</p>
     </section>
     </body>
 </html>
