updates to pictures and HTML lines

--- a/index.html
+++ b/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<header>
+<head>
     <meta charset="UTF-8">
     <title> Tyler Portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <h1>Tyler Caelwaerts</h1>
-</header>
-    <body> 
-        <hero></hero>    
-         <!-- needs a nav element and a link for each section -->
+    
+</head>
+    <body>
+        <header>
+            <h1>Tyler Caelwaerts</h1>
+            <nav class="topnav">
+            <a href="#about me">About Me</a>
+            <a href="#porfolio">Portfolio</a>
+            <a href="#contact me">Contact Me</a>
+        </nav>
+        </header>
+        <hero class="hero-banner">
+            <h2>Choose me, I dare you.</h2>
+        </hero>    
          <section>
+            <main>
             <h2>About Me</h2>
+        </main>
         <p>This section shows my goals and some pieces about me</p>
     </section>
         <section>
-            <h2>Portfolio</h2>
-        <p>This section shows my projects and what I did with them </p>
-        <h3>https://tiecaelwaerts.github.io/prework-study-guide/</h3>
+            <main>
+                <h2>Portfolio</h2>
+            </main>
+        <flex-item:>
+            <a href="https://tiecaelwaerts.github.io/prework-study-guide/">Study Guide</a>
+        </flex-item>
         <p>First project, showing the initial process of HTML and CSS</p>
-        <h3>https://tiecaelwaerts.github.io/Horiseon-ticket/</h3>
+        <flex-item>
+            <a href="https://tiecaelwaerts.github.io/Horiseon-ticket/">Horiseon Project</a>
+        </flex-item>
         <p>First homework assignment, shows the starting of advanced HTML</p>
     </section>
         <section>
-            <h2>Contact</h2>
-        <p>Coming soon to a Software Engineer near you!</p>
+            <main>
+                <h2>Contact Me</h2>
+            </main>
+            <contact>
+            <li>920-883-0187</li>
+            <li>tiecaelwaerts@gmail.com</li>
+        </contact>        
     </section>
     </body>
 </html>
