updates to both html and CSS to add pictures and display

--- a/index.html
+++ b/index.html
@@ -12,40 +12,52 @@
             <h1>Tyler Caelwaerts</h1>
             <nav class="topnav">
             <a href="#about me">About Me</a>
-            <a href="#porfolio">Portfolio</a>
+            <a href="#portfolio">Portfolio</a>
             <a href="#contact me">Contact Me</a>
         </nav>
         </header>
-        <hero class="hero-banner">
+        <div class="page-wrapper">
+        <section class="hero-banner">
             <h2>Choose me, I dare you.</h2>
-        </hero>    
-         <section>
-            <main>
+        </section>    
+         <section id="about-me">
             <h2>About Me</h2>
-        </main>
-        <p>This section shows my goals and some pieces about me</p>
+        <p>Name- Tyler Caelwaerts, future software engineer. Been a combo of customer service and military my entire time since high
+            school.<br> Now, it is time for more.<br>With my military training I bring some great attention to detail, and a great 
+            mindset for learning new things even when it scares me. With the customer service I bring ways to think outside the box to
+            get things done. All while making sure the job is done and the customer is happy.<br>
+            I am looking forward to the future of being a software engineer.
+        </p>
     </section>
-        <section>
-            <main>
+        <section id="portfolio">
                 <h2>Portfolio</h2>
-            </main>
-        <flex-item:>
-            <a href="https://tiecaelwaerts.github.io/prework-study-guide/">Study Guide</a>
-        </flex-item>
+        <main class ="flex-item">
+           <div class="run-buddy">
+            <a href="https://tiecaelwaerts.github.io/prework-study-guide/">Study Guide</a> 
         <p>First project, showing the initial process of HTML and CSS</p>
-        <flex-item>
+           </div>
+            <div class="led-wall">
             <a href="https://tiecaelwaerts.github.io/Horiseon-ticket/">Horiseon Project</a>
-        </flex-item>
-        <p>First homework assignment, shows the starting of advanced HTML</p>
-    </section>
-        <section>
-            <main>
+            <p>First homework assignment, shows the starting of advanced HTML</p>
+            </div>
+            <div class="react-calc">
+                <p>Coming Soon!</p>
+            </div>
+            <div class="pastel-puzzles">
+                <p>Coming Soon!</p>
+            </div>
+            <div class="surf-report">
+                <p>Coming Soon!</p>
+            </div>
+        </main>
+        </section>
+        <section id="contact-me">
                 <h2>Contact Me</h2>
-            </main>
-            <contact>
-            <li>920-883-0187</li>
-            <li>tiecaelwaerts@gmail.com</li>
-        </contact>        
-    </section>
+            <address>
+            <p>920-883-0187</p>
+            <p>Email: <a href= "mailto:tiecaelwaerts@gmail.com">tiecaelwaerts@gmail.com</a></p>
+            </address>        
+        </section>
+    </div>
     </body>
 </html>
