updates to html and css for turning in

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </nav>
         </header>
         <div class="page-wrapper">
-        <section class="hero-banner">
+        <div class="hero-banner">
             <h2>Choose me, I dare you.</h2>
-        </section>    
+        </div>    
          <section id="about-me">
             <h2>About Me</h2>
         <p>Name- Tyler Caelwaerts, future software engineer. Been a combo of customer service and military my entire time since high
@@ -28,26 +28,26 @@
             get things done. All while making sure the job is done and the customer is happy.<br>
             I am looking forward to the future of being a software engineer.
         </p>
-    </section>
+        </section>
         <section id="portfolio">
                 <h2>Portfolio</h2>
         <main class ="flex-item">
            <div class="run-buddy">
-            <a href="https://tiecaelwaerts.github.io/prework-study-guide/">Study Guide</a> 
-        <p>First project, showing the initial process of HTML and CSS</p>
+            <h3>Study Guide<a href="https://tiecaelwaerts.github.io/prework-study-guide/"></a></h3> 
+           <p>First project, showing the initial process of HTML and CSS</p>
            </div>
             <div class="led-wall">
-            <a href="https://tiecaelwaerts.github.io/Horiseon-ticket/">Horiseon Project</a>
+           <h3><a href="https://tiecaelwaerts.github.io/Horiseon-ticket/">Horiseon Project</a></h3>
             <p>First homework assignment, shows the starting of advanced HTML</p>
             </div>
             <div class="react-calc">
-                <p>Coming Soon!</p>
+                <h3>Coming Soon!</h3>
             </div>
             <div class="pastel-puzzles">
-                <p>Coming Soon!</p>
+                <h3>Coming Soon!</h3>
             </div>
             <div class="surf-report">
-                <p>Coming Soon!</p>
+                <h3>Coming Soon!</h3>
             </div>
         </main>
         </section>
